--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -399,6 +399,7 @@
     <Compile Include="Utilities\HtmlExtensions.cs" />
     <Compile Include="Utilities\LowerCaseRoute.cs" />
     <Compile Include="Utilities\SongBinder.cs" />
+    <Compile Include="Utilities\XboxAuthentication.cs" />
     <Compile Include="ViewModels\AlbumViewModel.cs" />
     <Compile Include="ViewModels\LocalMerger.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
