Make play drop-down in place of the individual buttons

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -435,6 +435,7 @@
     <Content Include="Content\orange-bootstrap-theme.css" />
     <Content Include="Content\orange-bootstrap.css" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Content\playbutton.png" />
     <Content Include="Content\spotify-charm.png" />
     <Content Include="Content\spotify-logo.png" />
     <Content Include="Content\teal-bootstrap-min.css" />
