Fix up user handling + Add OwnerHash to modified table User still isn't working quite as expected and probably need to find a different way to celar the EF Local cache...

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -44,6 +44,7 @@ Sample binding in application.config for iisexpress
       <assemblies>
         <!--Application Insights: add System.Runtime assembly to resolve PCL dependencies-->
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+        <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" maxRequestLength="10485760"/>
@@ -289,6 +290,9 @@ Sample binding in application.config for iisexpress
       <ignoredTypes>
         <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
       </ignoredTypes>
+      <uris>
+        <add regex=".*/admin.*"/>
+      </uris>
     </runtimePolicies>
     <!--<logging level="Trace" />-->
 
