Several nice optimization to EF to reduce round-trips to database

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -282,7 +282,7 @@ Sample binding in application.config for iisexpress
       <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding10" contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortUS"/>
     </client>
   </system.serviceModel>
-  <glimpse defaultRuntimePolicy="Off" endpointBaseUri="~/Glimpse.axd">
+  <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
     <!-- 
           For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. -->
