--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -4,7 +4,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="BundleTransformer.Core" version="1.9.35" targetFramework="net45" />
-  <package id="BundleTransformer.Less" version="1.9.35" targetFramework="net45" />
+  <package id="BundleTransformer.Less" version="1.9.37" targetFramework="net45" />
   <package id="BundleTransformer.MicrosoftAjax" version="1.9.34" targetFramework="net45" />
   <package id="chosen" version="1.2.0" targetFramework="net45" />
   <package id="chosen.jquery" version="1.2.0" targetFramework="net45" />
@@ -19,8 +19,9 @@
   <package id="glimpse-knockout" version="0.1.5" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="JavaScriptEngineSwitcher.Core" version="1.2.0" targetFramework="net45" />
-  <package id="JavaScriptEngineSwitcher.Msie" version="1.2.0" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.2.2" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
+  <package id="jQuery.LiveQuery" version="1.3.5" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
@@ -54,9 +55,9 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="MsieJavaScriptEngine" version="1.5.0" targetFramework="net45" />
+  <package id="MsieJavaScriptEngine" version="1.5.1" targetFramework="net45" />
   <package id="MvcDiagnostics" version="5.2.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
