--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DanceMerge.cs" />
     <Compile Include="DanceMusicService.cs" />
     <Compile Include="DanceRatingDelta.cs" />
+    <Compile Include="DanceRatingInfo.cs" />
     <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="IDanceMusicContext.cs" />
     <Compile Include="DanceLink.cs" />
@@ -113,6 +114,7 @@
     <Compile Include="TrackNumber.cs" />
     <Compile Include="UndoAction.cs" />
     <Compile Include="UndoResult.cs" />
+    <Compile Include="UserTag.cs" />
     <Compile Include="XboxService.cs" />
   </ItemGroup>
   <ItemGroup>
