--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -49,7 +49,8 @@ Sample binding in application.config for iisexpress
     </compilation>
     <httpRuntime targetFramework="4.5" maxRequestLength="10485760"/>
     <trace enabled="true" writeToDiagnosticsTrace="true" mostRecent="true" pageOutput="false"/>
-    <customErrors mode="RemoteOnly"></customErrors>
+    <!--customErrors mode="RemoteOnly"></customErrors-->
+    <customErrors mode="Off"></customErrors>
 
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
