--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -74,6 +74,7 @@
     <Compile Include="DanceRatingDelta.cs" />
     <Compile Include="DanceRatingInfo.cs" />
     <Compile Include="DictionaryExtensions.cs" />
+    <Compile Include="ErrorModel.cs" />
     <Compile Include="IDanceMusicContext.cs" />
     <Compile Include="DanceLink.cs" />
     <Compile Include="MergeCluster.cs" />
