--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -386,6 +386,10 @@
     <Compile Include="Migrations\201501071958002_OwnerHash.Designer.cs">
       <DependentUpon>201501071958002_OwnerHash.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502112056341_UserInfo.cs" />
+    <Compile Include="Migrations\201502112056341_UserInfo.Designer.cs">
+      <DependentUpon>201502112056341_UserInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Context\DanceMusicConfiguration.cs" />
     <Compile Include="Context\DanceMusicContext.cs" />
@@ -784,6 +788,7 @@
     <Content Include="Views\Song\Dances.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Shared\_TagEditor.cshtml" />
+    <Content Include="Views\Manage\EditProfile.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -852,6 +857,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501071958002_OwnerHash.resx">
       <DependentUpon>201501071958002_OwnerHash.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502112056341_UserInfo.resx">
+      <DependentUpon>201502112056341_UserInfo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
