--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -84,6 +84,7 @@
     <Compile Include="IDanceMusicContext.cs" />
     <Compile Include="DanceLink.cs" />
     <Compile Include="MergeCluster.cs" />
+    <Compile Include="MusicServiceStub.cs" />
     <Compile Include="PurchaseType.cs" />
     <Compile Include="ServiceType.cs" />
     <Compile Include="SongCounts.cs" />
