--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -81,6 +81,7 @@
     <Compile Include="DbTestSet.cs" />
     <Compile Include="MockContext.cs" />
     <Compile Include="MockUserStore.cs" />
+    <Compile Include="MusicServiceTests.cs" />
     <Compile Include="SongDetailTests.cs" />
     <Compile Include="SongTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
