Basic regional permisssons checking for spotify

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -404,6 +404,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
+    <Compile Include="Utilities\GenericPrincipalExtensions.cs" />
     <Compile Include="Utilities\SpotAuthentication.cs" />
     <Compile Include="Utilities\AdmAuthentication.cs" />
     <Compile Include="Utilities\AWSFetcher.cs" />
